--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_BASE_URL=https://iyougame-sora2api.hf.space
-API_KEY=han1234
+API_BASE_URL=https://api.openai.com/v1
+API_KEY=your_openai_api_key_here
