--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_BASE_URL=https://api.openai.com/v1
-API_KEY=your_openai_api_key_here
+API_BASE_URL=https://iyougame-soarmb.hf.space/v1
+API_KEY=han1234
