--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-# JSONBin API Configuration
-# Get your API key from: https://jsonbin.io/app/keys
-JSONBIN_API_KEY=your_master_key_here
+# Sora2mb 后端 API 地址
+# 默认使用 Hugging Face Space 部署的后端
+API_BASE_URL=https://iyougame-soarmb.hf.space/v1
 
-# Create a bin for configurations at: https://jsonbin.io/app/bins
-JSONBIN_BIN_ID=your_config_bin_id_here
+# Sora2mb API 密钥
+# 请根据后端配置修改此密钥
+API_KEY=han1234
 
-# Create a bin for video URLs at: https://jsonbin.io/app/bins
-VIDEO_BIN_ID=your_video_bin_id_here
+# 服务端口（可选）
+# 默认: 8000
+PORT=8000
