feat: 添加飞书多维表格批量生成功能
-  完整的飞书多维表格集成
-  支持批量生成和单个生成
-  详细的集成文档和表格设计
-  自动同步生成状态到飞书
-  环境变量配置支持

功能特性:
- 从飞书表格获取待生成任务
- 自动更新任务状态(待生成/生成中/成功/失败)
- 批量生成多个视频
- 手动生成单个视频
- 生成完成后自动填写视频URL和时间

文件:
- FEISHU_INTEGRATION.md - 完整的集成文档
- feishu.ts - 飞书 API 服务
- server.ts - 添加飞书 API 端点
- index.html - 添加飞书批量生成界面
- .env.example - 添加飞书配置示例

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,20 @@ API_KEY=han1234
 # 服务端口（可选）
 # 默认: 8000
 PORT=8000
+
+# 飞书多维表格配置（可选）
+# 如需使用飞书批量生成功能，请配置以下参数
+
+# 飞书应用 ID
+FEISHU_APP_ID=cli_xxxxxxxxxxxxx
+
+# 飞书应用密钥
+FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxx
+
+# 多维表格 App Token
+# 从表格 URL 中获取: https://xxx.feishu.cn/base/[app_token]
+FEISHU_APP_TOKEN=bascnxxxxxxxxxxxxxx
+
+# 数据表 ID
+# 从表格 URL 中获取: https://xxx.feishu.cn/base/xxx?table=[table_id]
+FEISHU_TABLE_ID=tblxxxxxxxxxxxxxx
