--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,5 @@
-# Sora2mb 后端 API 地址
-# 默认使用 Hugging Face Space 部署的后端
-API_BASE_URL=https://iyougame-soarmb.hf.space/v1
+# Sora API Configuration
+# 在 Deno Deploy 控制台设置这些环境变量
 
-# Sora2mb API 密钥
-# 请根据后端配置修改此密钥
-API_KEY=han1234
-
-# 服务端口（可选）
-# 默认: 8000
-PORT=8000
-
-# 飞书多维表格配置（可选）
-# 如需使用飞书批量生成功能，请配置以下参数
-
-# 飞书应用 ID
-FEISHU_APP_ID=cli_xxxxxxxxxxxxx
-
-# 飞书应用密钥
-FEISHU_APP_SECRET=xxxxxxxxxxxxxxxxxxxxx
-
-# 多维表格 App Token
-# 从表格 URL 中获取: https://xxx.feishu.cn/base/[app_token]
-FEISHU_APP_TOKEN=bascnxxxxxxxxxxxxxx
-
-# 数据表 ID
-# 从表格 URL 中获取: https://xxx.feishu.cn/base/xxx?table=[table_id]
-FEISHU_TABLE_ID=tblxxxxxxxxxxxxxx
+API_BASE_URL=https://api.openai.com/v1
+API_KEY=your_api_key_here
