Remove sensitive data from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Sora2mb 后端 API 地址
-# 默认使用 Hugging Face Space 部署的后端
-API_BASE_URL=https://iyougame-soarmb.hf.space/v1
+# 请在 Deno Deploy 环境变量中设置真实地址
+API_BASE_URL=https://your-api-endpoint.example.com/v1
 
 # Sora2mb API 密钥
-# 请根据后端配置修改此密钥
-API_KEY=han1234
+# 请在 Deno Deploy 环境变量中设置真实密钥
+API_KEY=your_api_key_here
 
 # 服务端口（可选）
 # 默认: 8000
